src/test/resources/Parser/SyntaxErrors/FunctionNotFound.front
class A {
    void test() {
        b();
    }
}